Add pagination to genres/genreId/books